--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <img src="assets/images/house4.jpg" alt="House 4" class="img-fluid">
           </div>
         </div>
-        <div class="row mt-3">
+        <div class="row">
           <div class="col-12 col-md-6 col-lg-3 position-relative mb-3">
             <div class="bg-black text-white py-2 px-3 position-absolute top-0">
               <h5 class="mb-0 fw-normal">Summer House</h5>
